# zeromq.js

./: .appveyor.yml  .clang-format  .clang-tidy  .clangd  .dockerignore  .editorconfig  .eslintrc  .gitattributes  .gitignore  .mocharc.js  .npmignore  .npmrc  .prettierignore  .prettierrc  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE_MPL-2.0.txt  README.md  appveyor.yml  binding.cc  binding.gyp  build.js  build_libzmq.sh  codecov.yml  download-zmq.js  draft.d.ts  draft.js  globals.html  hierarchy.html  index.html  install_dev.sh  modules.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig-build.json  (+7 more)
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yml  docs.yml
assets/: hierarchy.js  highlight.css  icons.js  main.js  navigation.js  search.js  style.css
assets/css/: main.css
assets/js/: main.js  search.js
browser/: index.html  index.js  package.json
classes/: Context.html  Dealer.html  Observer.html  Pair.html  Proxy.html  Publisher.html  Pull.html  Push.html  Reply.html  Request.html  Router.html  Socket.html  Stream.html  Subscriber.html  XPublisher.html  XSubscriber.html  _index_.context.html  _index_.dealer.html  _index_.observer.html  _index_.pair.html  _index_.proxy.html  _index_.publisher.html  _index_.pull.html  _index_.push.html  _index_.reply.html  _index_.request.html  _index_.router.html  _index_.socket.html  _index_.stream.html  _index_.subscriber.html  _index_.xpublisher.html  _index_.xsubscriber.html  context.html  dealer.html  observer.html  pair.html  proxy.html  publisher.html  pull.html  push.html  (+8 more)
docker/: alpine.dockerfile  debian.dockerfile  ubuntu.dockerfile
docs/: globals.html  index.html
docs/classes/: _index_.context.html  _index_.dealer.html  _index_.observer.html  _index_.pair.html  _index_.proxy.html  _index_.publisher.html  _index_.pull.html  _index_.push.html  _index_.reply.html  _index_.request.html  _index_.router.html  _index_.socket.html  _index_.stream.html  _index_.subscriber.html  _index_.xpublisher.html  _index_.xsubscriber.html
docs/interfaces/: _index_.readable.html  _index_.writable.html
docs/modules/: _index_.html
enums/: _internal_.SocketType.html
examples/: package.json  pnpm-lock.yaml  producer.js  pubber.js  smoketest.js  subber.js  tsconfig.json  worker.js
examples/majordomo/: README.md  broker.ts  index.ts  service.ts  types.ts  worker.ts
examples/pub-sub/: index.ts  publisher.ts  subscriber.ts
examples/push-pull/: index.ts  producer.ts  worker.ts
examples/queue/: README.md  index.ts  queue.ts
examples/req-rep/: client.ts  index.ts  server.ts
examples/threaded-worker/: README.md  index.ts  processor.ts  threaded-worker.ts
examples/v5-compat/: index.js
examples/wasm/: index.html  index.mjs  package.json  pnpm-lock.yaml  types.d.ts
functions/: curveKeyPair.html
interfaces/: EventSubscriber.html  Readable.html  RouterConnectOptions.html  StreamConnectOptions.html  Writable.html  _index_.readable.html  _index_.writable.html  _internal_.ArrayBufferView.html  _internal_.AsyncIterator.html  _internal_.AuthError.html  _internal_.ErrnoError.html  _internal_.Error.html  _internal_.EventAddress.html  _internal_.EventError.html  _internal_.EventInterval.html  _internal_.IteratorReturnResult.html  _internal_.IteratorYieldResult.html  _internal_.PromiseLike.html  _internal_.ProtoError.html  _internal_.SharedArrayBuffer.html  _internal_.SharedArrayBufferConstructor.html  readable.html  writable.html
lib/: index.d.ts  index.js  load-addon.js  load-addon.js.map
modules/: _index_.html  _internal_.html
patches/: electron-mocha.patch
script/: build.js  build.sh  build.ts  downlevel-dts.ts  format.sh  install-deps.bash  install-deps.sh  install.js  lint.sh  macos-arm-deps.sh  merge-artifacts.mts  prebuild.mjs  prebuild.mts  prebuild.ts  smoke-test.bash  tsconfig.esm.json  tsconfig.json  utils.js  utils.ts
script/ci/: alpine-chroot-install.sh  downlevel-dts.js  download.js  install.sh  package.sh  prebuild.sh  test.sh
scripts/: build_for_armhf.sh  build_libzmq.sh  cross_compile.sh  download-win-lib.js  download-zmq.js  download.js  install_dev.sh  prebuild-install.js  preinstall.js  prepare.js  publish_docs.sh  trigger_travis_build.sh
src/: .eslintrc  binding.cc  binding.h  closable.h  compat.ts  context.cc  context.h  draft.ts  errors.ts  incoming_msg.cc  incoming_msg.h  index.ts  inline.h  load-addon.ts  module.cc  module.h  native.ts  observer.cc  observer.h  outgoing_msg.cc  outgoing_msg.h  poller.h  prefix.h  proxy.cc  proxy.h  socket.cc  socket.h  tsconfig.json  util.ts  wasm.cc  win_delay_load_hook.cc  zmq_inc.h
src/compat/: capabilities.ts  long-options.ts  poll-states.ts  send-options.ts  socket-states.ts  types.ts
src/util/: arguments.h  async_scope.h  electron_helper.h  error.h  object.h  reaper.h  string_or_buffer.h  take.h  to_string.h  trash.h  uvdelayed.h  uvhandle.h  uvimmediate.h  uvloop.h  uvwork.h
test/: .eslintrc  context.js  debug.ts  exports.js  gc.js  hook.js  mocha.opts  package.json  pnpm-lock.yaml  socket.error-callback.js  socket.js  socket.messages.js  socket.monitor.js  socket.pub-sub.js  socket.router.js  socket.unbind.js  socket.xpub-xsub.js  socket.zap.js  tsconfig.json  tslint.json  zap.js  zmq_proxy.push-pull.js  zmq_proxy.router-dealer.js  zmq_proxy.xpub-xsub.js  zmq_proxy.xrep-xreq.js
test/bench/: create-socket.js  deliver-async-iterator.js  deliver-multipart.js  deliver.js  index.js  queue.js
test/unit/: helpers.ts  (+36 more)
types/: Event.html  EventOfType.html  EventType.html  Message.html  MessageLike.html  SocketOptions.html  _internal_.ArrayBufferLike.html  _internal_.EventFor.html  _internal_.Expand.html  _internal_.Extract.html  _internal_.IfEquals.html  _internal_.IteratorResult.html  _internal_.Options.html  _internal_.Partial.html  _internal_.Pick.html  _internal_.WritableKeys.html
variables/: _internal_.Error-1.html  _internal_.SharedArrayBuffer-1.html  capability.html  context-1.html  version.html
zmq-prebuilt/: binding.gyp  package.json
(+56 files in other folders)
